--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 authors = ["Wiktor Mazur <wiktormazur1@gmail.com>"]
 edition = "2018"
 
+[lib]
+crate-type = ["cdylib"]
+
 [dependencies]
