--- a/gameserver/Cargo.toml
+++ b/gameserver/Cargo.toml
@@ -6,5 +6,7 @@ authors = ["radiand <radiand@protonmail.com>"]
 [dependencies]
 log = "0.4"
 simplelog = "~0.5.0"
-websocket = "0.21.1"
+snowflake = "1.2"
 specs = "0.14.1"
+specs-derive = "0.3.0"
+websocket = "0.21.1"
