--- a/gameserver/Cargo.toml
+++ b/gameserver/Cargo.toml
@@ -4,9 +4,11 @@ version = "0.1.0"
 authors = ["radiand <radiand@protonmail.com>"]
 
 [dependencies]
+futures = "0.1"
 log = "0.4"
 simplelog = "~0.5.0"
 snowflake = "1.2"
 specs = "0.14.1"
 specs-derive = "0.3.0"
-websocket = "0.21.1"
+tokio = "0.1"
+websocket = "0.22.2"
